--- a/package.json
+++ b/package.json
@@ -83,6 +83,10 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
+        "@remix-run/dev": "^2.0.0",
+    "@remix-run/vite": "^2.0.0",
+
+
     "vite": "^5.4.19"
   }
 }
